Checking for file and directory names that may be too long for a given platform. Fixes bug 10147. r=deveditz, sr=mscott